--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 <link rel="shortcut icon" href="images/shezanfavi.png" type="image/x-icon">
 </head>
 <body>
+    <div class="main-menu">
+        
+            <a href="">HOME</a>
+            <a href="https://www.linkedin.com/in/shezankhan/" target="block">ABOUT</a>
+            <a href="https://github.com/shezank" target="block">PORTFOLIO</a>
+            <a href="https://www.facebook.com/farhankobirkhan/" target="block">CONTACT ME</a>
+        
+    </div>
     <section class="my-story">
         <div class="two-box">
             <h1>My Story</h1>
